# scanq-shared

./: .gitignore  EXECUTIVE_SUMMARY.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/: .registry
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: ARCHITECTURE.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DELIVERABLES.md  INTEGRATION_GUIDE.md  INTEGRATION_PROPOSAL.md  INTEGRATION_TECHNICAL_GUIDE.md  MIGRATION.md  PHASE1_TASKS.md  PRD.md  TRD.md
docs/release-compatibility/: v1.2.0.md
specs/001-phase1-shared-contracts/: .spec-context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-shared-contracts-ml-models/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-option-e-contract-hardening/: plan.md  spec.md  tasks.md
src/scanq_shared/: __init__.py  version.py
tests/: conftest.py
tests/contract/: test_dwelling_models.py  test_media_compose_contracts.py  test_migration_plan_requirements.py  test_ml_inference_contracts.py  test_phase1_schema_fixtures.py  test_project_schemas.py  test_public_exports.py  test_release_classification_rules.py  test_shared_context_types.py  test_shared_enums.py
tests/fixtures/: compatibility_payloads.py  sample_payloads.py
tests/integration/: test_ml_inference_client_errors.py  (+6 more)
(+34 files in other folders)
