[project]
name = "scanq-shared"
version = "0.1.0"
description = "Shared contracts and typed clients for ScanQ services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.9.2",
  "typing-extensions>=4.10.0",
  "httpx>=0.27.2",
]

[dependency-groups]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
