[project]
name = "scanq-shared"
version = "1.2.0"
description = "Shared contracts and typed clients for ScanQ services"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Proprietary"}
authors = [{name = "Archanaut Pty Ltd"}]
dependencies = [
  "pydantic>=2.9.2",
  "typing-extensions>=4.10.0",
  "httpx>=0.27.2",
]

[dependency-groups]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.14"
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
